--- a/main.tex
+++ b/main.tex
@@ -46,7 +46,7 @@
 \keywords{GPU, reliability, supercomputer, NVIDIA,
   Cray, large-scale systems, Cox regression.}
 
-\input{intro}
+%\input{intro}
 \input{related}
 \input{dataprep}
 \input{dataclean}
@@ -58,6 +58,6 @@
 \bibliographystyle{unsrt}
 \bibliography{refs}
 
-\input{appendixA}
+%\input{appendixA}
 
 \end{document}
