--- a/dataprep.tex
+++ b/dataprep.tex
@@ -24,8 +24,9 @@ appear in the data.
   \begin{center}
     \includegraphics[width=\textwidth]{figs/attention_intervals001.pdf}
   \end{center}
-  \caption{Inter-inventory times, obrained by taking intervals between
-    unique dates in the data. Note square root scale on $y$-axis.}
+  \caption{Inter-inventory times, taken as time intervals between
+    unique dates in the data. Note square root scale on the vertical
+    axis.}
   \label{fig:inventory}
 \end{figure}
 \fix{George: Add color for another variable? (new-old, date)??}
