added pdfs and uncommented sections

--- a/main.tex
+++ b/main.tex
@@ -102,12 +102,12 @@ GPU, reliability, supercomputer, NVIDIA, Cray, large-scale systems, Cox regressi
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Sections
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\input{intro}
+\input{intro}
 \input{related}
-%\input{dataprep}
-%\input{dataclean}
+\input{dataprep}
+\input{dataclean}
 \input{tbf}
-%\input{survival}
+\input{survival}
 \input{discussion}
 \input{acknowledgments}
 
