readded sections with modified pdfs

--- a/dataclean.tex
+++ b/dataclean.tex
@@ -39,22 +39,22 @@ shows when each GPU was installed and removed at various locations as
 well as its DBE and OTB events. The second view by location, shows
 when different GPUs were installed and removed at a location, and
 their OTB and DBE events.
-\begin{figure}[ht]
-  \includegraphics[width=6in]{figs/sample_sn.pdf}
+\begin{figure*}[tb]
+  \includegraphics[width=6.5in]{figs/sample_sn.pdf}
   \caption{GPU serial number view of life and failures. Legend: black
     dots are installs, black lines are lifetimes at installed
     location, blue squares are OTB events, red triangles are DBE
     events, and black ] are ``last seen'' events.}
   \label{fig:gpuview}
-\end{figure}
-\begin{figure}[ht]
-  \includegraphics[width=6in]{figs/sample_loc.pdf}
+\end{figure*}
+\begin{figure*}[tb]
+  \includegraphics[width=6.5in]{figs/sample_loc.pdf}
   \caption{GPU location view of life and failures.  Legend: black
     dots are installs, black lines are lifetimes at installed
     location, blue squares are OTB events, red triangles are DBE
     events, and black ] are ``last seen'' events.}
   \label{fig:locview}
-\end{figure}
+\end{figure*}
 The serial number view clearly shows the two batches and the more
 frequent OTB and DBE events in the old batch. It is also clear from
 this view that most new GPUs stay at the initial install location
