--- a/dataprep.tex
+++ b/dataprep.tex
@@ -22,7 +22,7 @@ apart. Figure~\ref{fig:inventory} shows inter-inventory times that
 appear in the data.
 \begin{figure}[bth]
   \begin{center}
-    \includegraphics[width=\textwidth]{figs/attention_intervals001.pdf}
+    \includegraphics[width=\columnwidth]{figs/attention_intervals001.pdf}
   \end{center}
   \caption{Inter-inventory times, taken as time intervals between
     unique dates in the data. Note square root scale on the vertical
