--- a/intro.tex
+++ b/intro.tex
@@ -15,12 +15,12 @@ assemblies because of a failing resistor on a printed circuit board.
 
 Figure~\ref{fig:chronology} illustrates the chronology of the rework
 cycles. It shows the number of GPU changes at periodic inventories.
-\begin{figure}[htbp]
+\begin{figure*}[tbp]
   \centering
-  \includegraphics[width=\textwidth]{figs/chronology.pdf}
+  \includegraphics[width=\textwidth]{figs/chronology001.pdf}
   \caption{Daily volume of GPU swaps with labels on most frequent dates.}
   \label{fig:chronology}
-\end{figure}
+\end{figure*}
  
 We have conducted a good bit of statistical analysis on the failure
 rates of these GPU assemblies, but I want to propose a different topic
