--- a/abstract.tex
+++ b/abstract.tex
@@ -1,3 +1,8 @@
+% !TEX root = main.tex
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Abstract
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 This system was \#1 in the world for a very long time, and has remained
 a critically important computer system. It defied scale with 18,688
 individual compute nodes, and delivered tens of billions of computing
