--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -5,4 +5,7 @@
 \section{Acknowledgments}
 \label{section:acknowledgments}
 
-This work was supported by the U.S. Department of Energy, Office of Science, Office of Advanced Scientific Computing Research, program managers Robinson Pino and Lucy Nowell, under contract number DE-AC05-00OR22725. \fix{Add any additional funding acknowledgements}
+This work was supported by the U.S. Department of Energy, Office of Science,
+Office of Advanced Scientific Computing Research, program managers Robinson Pino
+and Lucy Nowell, under contract number DE-AC05-00OR22725. \fix{Add any additional
+funding acknowledgements}
