--- a/dataclean.tex
+++ b/dataclean.tex
@@ -1,5 +1,10 @@
+% !TEX root = main.tex
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Viewing and Cleaning the Data
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Viewing and Cleaning the Data}
-\label{sec:clean}
+\label{section:dataclean}
+
 \fix{George's section: The two views of GPU life: by SN and by
   location, its use in cleaning data, etc.}
 
