--- a/dataprep.tex
+++ b/dataprep.tex
@@ -1,5 +1,10 @@
+% !TEX root = main.tex
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Data Collection and Preprocessing
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Data Collection and Preprocessing}
-\label{sec:data}
+\label{section:dataprep}
+
 \fix{Don's section}
 Data on GPU life times is constructed from two sources: inventory runs
 and failure event records. Two types of failure events were collected:
