--- a/discussion.tex
+++ b/discussion.tex
@@ -1,6 +1,9 @@
+% !TEX root = main.tex
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Discussion
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Discussion}
-\label{sec:discussion}
-\fix{Christian, Jim and everyone}
+\label{section:discussion}
 
 \begin{itemize}
 \item Cray and NVIDIA take care of the hardware and some systems and driver
