--- a/intro.tex
+++ b/intro.tex
@@ -1,5 +1,10 @@
+% !TEX root = main.tex
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Introduction
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Introduction}
-\label{sec:intro}
+\label{section:introduction}
+
 The Cray XK7 Titan supercomputer was the \#1 system in the world for a
 very long time, and has remained a critically important computer
 system through the end of its life in the Summer of 2019. It defied
