--- a/related.tex
+++ b/related.tex
@@ -1,6 +1,9 @@
+% !TEX root = main.tex
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Related Work
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Related Work}
-\label{sec:related}
-\fix{Christian's section}
+\label{section:related}
 
 Prior work in investigating Titan's reliability includes a significant amount of work that covers different aspects.
 %
