--- a/tbf.tex
+++ b/tbf.tex
@@ -1,3 +1,8 @@
+% !TEX root = main.tex
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Time Between Failures Analysis
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Time Between Failures Analysis}
-\label{sec:tbf}
+\label{section:tbf}
+
 \fix{Rizwan's section}
