new title and abstract

--- a/main.tex
+++ b/main.tex
@@ -42,7 +42,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Title & First-Page Acknowledgements
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{An Evaluation of GPU Reliability on Titan Supercomputer%
+\title{GPU Lifetimes on Titan Supercomputer: \\ Survival Analysis and Reliability%
 \doubleblind{\thanks{This work was sponsored by the U.S. Department of Energy's
 Office of Advanced Scientific Computing Research. This manuscript has been
 authored by UT-Battelle, LLC under Contract No. DE-AC05-00OR22725 with the U.S.
@@ -102,7 +102,8 @@ jrogers@ornl.gov}}{}}
 % Keywords
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{IEEEkeywords}
-GPU, reliability, supercomputer, NVIDIA, Cray, large-scale systems, Cox regression
+GPU, reliability, supercomputer, NVIDIA, Cray, large-scale systems,
+Kaplan-Meier survival, Cox regression
 \end{IEEEkeywords}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
