--- a/refs.bib
+++ b/refs.bib
@@ -146,6 +146,18 @@
   doi           = "10.1109/IPDPS.2016.100"
 }
 
+@Article{lubridate,
+    title = {Dates and Times Made Easy with {lubridate}},
+    author = {Garrett Grolemund and Hadley Wickham},
+    journal = {Journal of Statistical Software},
+    year = {2011},
+    volume = {40},
+    number = {3},
+    pages = {1--25},
+    url = {http://www.jstatsoft.org/v40/i03/},
+  }
+
+
 @INPROCEEDINGS{7056044, 
 author={D. {Tiwari} and S. {Gupta} and J. {Rogers} and D. {Maxwell} and P. {Rech} and S. {Vazhkudai} and D. {Oliveira} and D. {Londo} and N. {DeBardeleben} and P. {Navaux} and L. {Carro} and A. {Bland}}, 
 booktitle={2015 IEEE 21st International Symposium on High Performance Computer Architecture (HPCA)}, 
