--- a/abstract.tex
+++ b/abstract.tex
@@ -3,7 +3,17 @@
 % Abstract
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-This system was \#1 in the world for a very long time, and has remained
-a critically important computer system. It defied scale with 18,688
-individual compute nodes, and delivered tens of billions of computing
-hours to DOE mission-critical programs for nearly 7 years. 
+The Cray XK7 Titan was the top supercomputer system in the world for a
+very long time and remained critically important throughout its nearly
+seven year life. It was also a very interesting machine from a
+reliability viewpoint as most of its power came from 18,688 GPUs whose
+operation was forced to execute three very significant rework cycles,
+two on the mechanical assembly and one on the GPUs. We write about the
+last rework cycle and a reliability analysis of the GPUs. Using
+statistical survival analysis techniques, we find that GPU reliability
+is dependent on heat dissipation to an extent that strongly correlates
+with detailed nuances of the system cooling architecture. In addition
+to describing some of the system history, the data collection, data
+cleaning, and our analysis of the data, we provide reliability
+recommendations for designing future state of the art supercomputing
+systems and their operation.
