km plots into one

--- a/survival.tex
+++ b/survival.tex
@@ -27,16 +27,9 @@ operation till the end. We use the R package {\tt survival} for the KM
 analysis.
 \begin{figure*}
   \centering
-  \includegraphics[width=6in]{figs/km_cage-node_o001.pdf}
-  \caption{Survival probability from Kaplan-Meier analysis for {\tt
-      old} batch GPUs, stratified by {\tt cage} and {\tt node}.}
-  \label{fig:km-old-cage-node}
-\end{figure*}
-\begin{figure*}
-  \centering
-  \includegraphics[width=6in]{figs/km_cage-node_c001.pdf}
-  \caption{Comparison of the old and new batches, focusing only on
-    three years of operation of the new batch so far.}
+  \includegraphics[width=7in]{figs/km_cage-node_a001.pdf}
+  \caption{Comparison of the old and new batches, including survival
+    differences based on {\tt cage} and {\tt node} GPU locations.}
   \label{fig:km-all-cage-node}
 \end{figure*}
 
