reduced cox fig size

--- a/survival.tex
+++ b/survival.tex
@@ -78,16 +78,16 @@ the effect of each covariate is adjusted for all the other
 covariates. 
  
 
-\begin{figure*}
-  \includegraphics[width=6.5in]{figs/cox_o001.pdf}
+\begin{figure}
+  \includegraphics[width=\columnwidth]{figs/cox_o001.pdf}
   \caption{GPU hazard ratios from Cox regression model on {\tt old}
     batch.}
-\end{figure*}
-\begin{figure*}
-  \includegraphics[width=6.5in]{figs/cox_n001.pdf}
+\end{figure}
+\begin{figure}
+  \includegraphics[width=\columnwidth]{figs/cox_n001.pdf}
   \caption{GPU hazard ratios from Cox regression model on {\tt new}
     batch.}
-\end{figure*}
+\end{figure}
 
 Higher numbered columns appear to have a higher (up to about 2x)
 failure rate. There actually seems to be a hint of three groups that
