smaller data figure

--- a/dataprep.tex
+++ b/dataprep.tex
@@ -25,7 +25,7 @@ Inventories are taken at boot time, which can occur anywhere from
 several times per day to more than a month
 apart. Figure~\ref{fig:inventory} shows inter-inventory times that
 appear in the data.
-\begin{figure}[bth]
+\begin{figure}[bt]
   \begin{center}
     \includegraphics[width=\columnwidth]{figs/attention_intervals001.pdf}
   \end{center}
@@ -44,8 +44,8 @@ record for each contiguously observed SN-Location combination.
 
 
 A typical GPU data record is of the form shown in Fig.~\ref{fig:dataraw},
-\begin{figure}
-{\small
+\begin{figure}[tb]
+{\tiny
 \begin{verbatim}
 0323812007945 | c17-4c1s3n1 | 01/10/2013 02:54:45 | 02/02/2013 11:32:29
  | c13-1c1s3n3 | 01/21/2014 21:10:42 | 08/01/2017 02:15:02
