--- a/dataprep.tex
+++ b/dataprep.tex
@@ -95,11 +95,17 @@ Figure~\ref{fig:layout}.
   \label{fig:layout}
 \end{figure}
 
-\fix{The logical 3d torus layout is $25\times 16\times 24$. How does
-  the 16 dimension map onto this? Are the 4 nodes actually very far
-  apart in terms of the network layout?}
+\fix{In the decomissioning video, I noticed there are actually 12+2+12
+  cabinets, the middle two being different. Are the compute nodes the
+  pairs of outside 12s and the two middle are service nodes?}
+
+\fix{The logical 3d torus layout is $25\times 16\times 24$. How do
+  the 25 and 16 dimensions map onto this? Are the 4 nodes actually very far
+  apart in terms of the network layout via the two routers?}
 
 \fix{Where does cool air arrive? Is it just dumped out at the top of
   the heat exchanger and circulate down? I noticed airholes in some
   floor tiles (more on the right than on the left). Is there cool air
   under the floor?}
+
+\fix{How does the cooling water circulate?}
